fixed result scrollbar

--- a/public/styles/min-640px.css
+++ b/public/styles/min-640px.css
@@ -52,7 +52,7 @@
   	overflow-x: hidden;
   	overflow-y: auto !important;
   	height: auto;
-  	max-height: calc(40vh);
+  	max-height: calc(60vh - 170px);
   	font-size: 32px;
 	font-weight: bold;
 	color: #fefefe;
